k8s/pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: shopping

spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin

  template:
    metadata:
      labels:
        app: pgadmin

    spec:
      containers:
      - name: pgadmin
        image: dpage/pgadmin4

        ports:
        - containerPort: 5050

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"

        volumeMounts:
        - name: pgadmin-storage
          mountPath: /var/lib/pgadmin

      volumes:
      - name: pgadmin-storage
        emptyDir: {}
