k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: shopping

spec:
  type: NodePort   # for browser access

  selector:
    app: frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007
