k8s/pgadmin-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: shopping

spec:
  type: NodePort

  selector:
    app: pgadmin

  ports:
    - port: 80
      targetPort: 5050  # or 80 depending on your container
      nodePort: 30008    # keep this in valid range
