k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres   # IMPORTANT (matches backend config)
  namespace: shopping
spec:
  selector:
    app: postgres

  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
